[package]
name = "hasher"
version = "0.4.5"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
atty = "0.2"
clap = "3.0.0-beta.2"
colored = "2"
ctrlc = "3"
digest = "0.9"
lazy_static = "1"
md-5 = "0.9"
num_cpus = "1"
ocl = "0.19"
qt_widgets = { version = "0.5", optional = true }
regex = "1"
sha2 = "0.9"

[dependencies.eytzinger]
version = "1.0"
features = ["branchless"]

[dev-dependencies]
rand = "0.7"

[features]
default = [ "qt" ]
qt = [ "qt_widgets" ]
