[package]
name = "hasher"
version = "0.5.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A hasher/unhasher"

[package.metadata.bundle]
name = "Hasher"
identifier = "com.mflima.hasher"
icon = [ "res/icon/icon*.png" ]
version = "0.5.0"
category = "public.app-category.utilities"
short_description = "A hasher/unhasher"

[dependencies]
atty = "0.2"
clap = "3.0.0-beta.2"
colored = "2"
ctrlc = "3"
digest = "0.9"
lazy_static = "1"
md-5 = "0.9"
num_cpus = "1"
ocl = "0.19"
qmetaobject = { version = "0.2.2", optional = true }
regex = "1"
sha2 = "0.9"

[dependencies.eytzinger]
version = "1.0"
features = ["branchless"]

[dev-dependencies]
rand = "0.7"

[features]
default = [ "qml" ]
qml = [ "qmetaobject" ]
