[package]
name = "hasher"
version = "0.6.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A hasher/unhasher"

[package.metadata.bundle]
name = "Hasher"
identifier = "com.mflima.hasher"
icon = [ "res/icon/icon*.png" ]
version = "0.6.0"
category = "public.app-category.utilities"
short_description = "A hasher/unhasher"

[profile.release]
lto = true

[dependencies]
atty = "0.2"
base64 = "0.13"
clap = { version = "3", features = [ "derive" ] }
colored = "2"
cpp = { version = "0.5", optional = true }
ctrlc = "3"
digest = "0.10"
lazy_static = "1"
md-5 = "0.10"
num_cpus = "1"
ocl = "0.19"
qmetaobject = { version = "0.2.2", optional = true }
qttypes = { version = "0.2.2", features = [ "qtquick" ], optional = true }
regex = "1"
sha2 = "0.10"

[dependencies.eytzinger]
version = "1.1"
features = ["branchless"]

[dev-dependencies]
rand = "0.8"

[build-dependencies]
cpp_build = { version = "0.5", optional = true }

[features]
default = []
qml = [ "qmetaobject", "qttypes", "cpp", "cpp_build" ]
